--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 623cab2
+	base = fc4d2eb
 	trimbase = 
 	parent = release/hydro/serial_utils
-	previous = 
+	previous = 623cab2
