--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 2799c8f
+	base = 31a8fea
 	trimbase = 
 	parent = debian/hydro/serial_utils
-	previous = 
+	previous = 2799c8f
