--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 299bf0c
+	base = bf3a5ba
 	trimbase = 
 	parent = debian/indigo/serial_utils
-	previous = 
+	previous = 299bf0c
