--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 20f512a
+	base = cfb05f4
 	trimbase = 
 	parent = release/indigo/serial_utils
-	previous = 
+	previous = 20f512a
