--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 6129028
+	base = d37da01
 	trimbase = 
 	parent = rpm/indigo/serial_utils
-	previous = 
+	previous = 6129028
