--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 271bcef
+	base = f99207b
 	trimbase = 
 	parent = debian/kinetic/serial_utils
-	previous = 
+	previous = 271bcef
