--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d0ae407
+	base = 09ec5c2
 	trimbase = 
 	parent = debian/kinetic/serial_utils
-	previous = 
+	previous = d0ae407
