--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 65d246c
+	base = 71ad9d6
 	trimbase = 
 	parent = release/kinetic/serial_utils
-	previous = 
+	previous = 65d246c
