--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 6951d15
+	base = bf4bb24
 	trimbase = 
 	parent = rpm/kinetic/serial_utils
-	previous = 
+	previous = 6951d15
